@@ -1,4 +1,4 @@
-.TH "GAMMU" "1" "Dec  3 2009" "Gammu 1.26.92" "Gammu Documentation"
+.TH "GAMMU" "1" "Dec 12 2009" "Gammu 1.26.93" "Gammu Documentation"
 
 .SH "NAME"
 
@@ -2179,6 +2179,12 @@ sent to server. Internet connection to www.gammu.org on port 80 required.
 
 .TP
 .BI "getdisplaystatus"
+
+.TP
+.BI "getlocation"
+Gets network information from phone (same as networkinfo)
+and prints location (latitude and longitude) based on information from 
+OpenCellID <http://opencellid.org>.
 
 .TP
 .BI "getsecuritystatus"
