@@ -2,6 +2,7 @@
 
 extern void PlayRingtone(int argc, char *argv[]);
 extern void CheckFirmware(int argc, char *argv[]);
+extern void GetLocation(int argc, char *argv[]);
 extern void Identify(int argc, char *argv[]);
 extern void NetworkInfo(int argc, char *argv[]);
 extern void Monitor(int argc, char *argv[]);
